force-app/main/default/objects/FieloPLT__BadgeMember__c/FieloPLT__BadgeMember__c.object-meta.xml
<CustomObject>
    <description>It links a specific Badge with the particular Member who has obtained a Badge.</description>
    <label>Badge Member</label>
    <nameField>
        <label>Badge Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>