force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/FieloPLT__Badge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Badge__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Badge granted to a Member.</description>
    <inlineHelpText>Badge granted to a Member.</inlineHelpText>
    <label>Badge</label>
    <referenceTo>FieloPLT__Badge__c</referenceTo>
    <relationshipName>BadgesMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>