force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/FieloPLT__ChallengeReward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ChallengeReward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Challenge Reward that has the Instant Badge set to be granted to Member.</description>
    <inlineHelpText>Challenge Reward that has the Instant Badge set to be granted to Member.</inlineHelpText>
    <label>Challenge Reward</label>
    <referenceTo>FieloPLT__ChallengeReward__c</referenceTo>
    <relationshipLabel>Badge Members</relationshipLabel>
    <relationshipName>BadgesMembers</relationshipName>
    <type>Lookup</type>
</CustomField>