force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/FieloPLT__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExpirationDate__c</fullName>
    <description>Date after which the Badge is no longer valid for the Member.</description>
    <inlineHelpText>Date after which the Badge is no longer valid for the Member.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>