force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Member who obtained a Badge.</description>
    <inlineHelpText>Member who obtained a Badge.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipName>BadgesMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>