force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/FieloPLT__Quantity__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Quantity__c</fullName>
    <description>Number of Badges granted to a Member.</description>
    <inlineHelpText>Number of Badges granted to a Member.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>