force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/FieloPLT__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rule that grants the Instant Badge to the Member.</description>
    <inlineHelpText>Rule that grants the Instant Badge to the Member.</inlineHelpText>
    <label>Rule</label>
    <referenceTo>FieloPLT__Rule__c</referenceTo>
    <relationshipLabel>Badge Members</relationshipLabel>
    <relationshipName>BadgesMembers</relationshipName>
    <type>Lookup</type>
</CustomField>