force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>Shows the status of the Badge given to that specific Member.</description>
    <inlineHelpText>Choose the status of the Badge given to that specific Member.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reverted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>