force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/FieloPLT__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Transaction resulting from given the Badge to the Member.</description>
    <inlineHelpText>Transaction resulting from given the Badge to the Member.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>FieloPLT__Transaction__c</referenceTo>
    <relationshipLabel>Badge Members</relationshipLabel>
    <relationshipName>BadgesMembers</relationshipName>
    <type>Lookup</type>
</CustomField>