force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/V_Classificacao__c.field-meta.xml
<CustomField>
    <fullName>V_Classificacao__c</fullName>
    <description>Classificação da badge.</description>
    <formula>TEXT( FieloPLT__Badge__r.V_Classificacao__c )</formula>
    <inlineHelpText>Classificação da badge.</inlineHelpText>
    <label>Classificação</label>
    <type>Text</type>
</CustomField>