force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/V_Email__c.field-meta.xml
<CustomField>
    <fullName>V_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>