force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/V_MemberName__c.field-meta.xml
<CustomField>
    <fullName>V_MemberName__c</fullName>
    <formula>FieloPLT__Member__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Participante</label>
    <type>Text</type>
</CustomField>