force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/V_MetaAFOLD__c.field-meta.xml
<CustomField>
    <fullName>V_MetaAFOLD__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Meta do ano fiscal relacionado ao badge.</description>
    <inlineHelpText>Meta do ano fiscal relacionado ao badge.</inlineHelpText>
    <label>Meta - AF OLD</label>
    <referenceTo>VN_MetasParticipantes__c</referenceTo>
    <relationshipLabel>Badges Ganhas</relationshipLabel>
    <relationshipName>Badges_Ganhas</relationshipName>
    <type>Lookup</type>
</CustomField>