force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/V_MetaParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_MetaParticipante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo preenchido via process builder, relacionando a Badge ao Meta do Participante vigente no momento em que a mesma foi concedida ao Member.</description>
    <label>Meta Participante AF</label>
    <referenceTo>VN_MetaParticipante__c</referenceTo>
    <relationshipLabel>Badge Members</relationshipLabel>
    <relationshipName>Badge_Members</relationshipName>
    <type>Lookup</type>
</CustomField>