force-app/main/default/objects/FieloPLT__BadgeMember__c/fields/V_OrdemRanking__c.field-meta.xml
<CustomField>
    <fullName>V_OrdemRanking__c</fullName>
    <description>Campo usado apenas para relatório (ordenar por pontos % meta)</description>
    <formula>V_Pontos__c +  V_MetaParticipante__r.V_PercentualMetaYTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo usado apenas para relatório (ordenar por pontos % meta)</inlineHelpText>
    <label>Ordem Ranking</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>