force-app/main/default/objects/FieloPLT__BadgeMember__c/validationRules/FieloPLT__ProgramConsistency.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ProgramConsistency</fullName>
    <active>true</active>
    <description>This Badge belongs to other Program. Create a new Badge in this Program so that you can use it.</description>
    <errorConditionFormula>FieloPLT__Badge__c != null &amp;&amp;
FieloPLT__Member__r.FieloPLT__Program__c &lt;&gt; FieloPLT__Badge__r.FieloPLT__Program__c</errorConditionFormula>
    <errorMessage>This Badge belongs to other Program. Create a new Badge in this Program so that you can use it.</errorMessage>
</ValidationRule>